--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@solana/actions": "^1.6.4",
+    "@solana/web3.js": "^1.95.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.439.0",
+    "mongoose": "^8.6.2",
     "next": "14.2.9",
     "react": "^18",
     "react-dom": "^18",
