--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/web3.js": "^1.95.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.439.0",
     "mongoose": "^8.6.2",
     "next": "14.2.9",
@@ -24,6 +25,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
