Added custom image , trying to save image on cloud to get link

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@solana/actions": "^1.6.4",
     "@solana/web3.js": "^1.95.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.439.0",
