--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
     "lucide-react": "^0.439.0",
     "mongoose": "^8.6.2",
     "next": "14.2.9",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
