--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.439.0",
     "mongoose": "^8.6.2",
     "next": "14.2.9",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
@@ -30,6 +31,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
